# enpire-sim

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
enpire/: __init__.py  metrics.py  orchestrator.py
enpire/agents/: __init__.py  _prompts.py  base.py  claude.py  local.py  mock.py  openai.py
enpire/environment/: __init__.py  base.py  pusht.py  robocasa.py
enpire/evolution/: __init__.py  base.py  greedy.py  random_selector.py  thompson.py  ucb.py
enpire/policy/: __init__.py  base.py  behavior_cloning.py  heuristic.py
enpire/rollout/: __init__.py  runner.py
enpire/utils/: __init__.py  logging.py
scripts/: plot_results.py  run_ablation.py  run_experiment.py  visualize_rollout.py
tests/: test_environment.py  test_evolution.py  test_orchestrator.py
